--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,2 +1,17 @@
-
+{% extends 'layout.html' %}
+{% block content %}
+    {% for blog in blogs %}
+    <section class="media pitch-area">
+        <div class="media-body">
+            <div class = 'section'>
+                <a class="mr-2" href='#'>{{blog.author.username}}</a>
+                <small class="text-muted">{{blog.date_posted.strftime('%Y-%m-%d')}}</small>
+            </div>
+            <h2><a class="section-title" href="{{url_for('main.blog',post_id=blog.id)}}">{{blog.title}}</a></h2>
+            <p class='pitch-area'>{{blog.content}}</p>
+            <a href="{{url_for('main.blog',post_id=blog.id)}}"><button class="btn btn-outline-info">Comments</button></a>
+        </div>
+    </section>
+    {% endfor %}
+{% endblock %}
 
